--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Tera&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
 
+  @import url('https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap');
+
 .linecontainer{
   @apply relative;
 }
@@ -15,5 +17,8 @@
   @apply w-2/5 text-white ;
 }
 .passwordinput{
-  @apply w-2/5 ;
+  @apply w-2/5 text-white ;
+}
+.signupdiv{
+  @apply bg-neutral-950 w-full rounded-md  placeholder:text-white h-9 px-4 border border-zinc-50;
 }
